--- a/AtlasReaper/packages.config
+++ b/AtlasReaper/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BOFNET" version="1.2.0" targetFramework="net48" />
   <package id="CommandLineParser" version="2.9.1" targetFramework="net45" />
   <package id="Costura.Fody" version="5.7.0" targetFramework="net45" developmentDependency="true" />
   <package id="Fody" version="6.7.0" targetFramework="net45" developmentDependency="true" />
